# mihomo-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config-bench-dns.yaml  config.example.yaml
.github/workflows/: audit.yml  bench.yml  coverage.yml  pages.yml  release.yml  test.yml
bench/: compare.py
crates/mihomo-api/: Cargo.toml
crates/mihomo-api/src/: lib.rs  log_stream.rs  routes.rs
crates/mihomo-api/static/: index.html
crates/mihomo-api/tests/: api_logs_ws_test.rs  api_test.rs
crates/mihomo-app/: Cargo.toml
crates/mihomo-app/src/: main.rs
crates/mihomo-app/tests/: systemd_config_test.rs
crates/mihomo-bench/: Cargo.toml
crates/mihomo-bench/src/: bench_dns.rs  main.rs  results.rs
crates/mihomo-common/: Cargo.toml
crates/mihomo-common/src/: adapter.rs  adapter_type.rs  dns_mode.rs  lib.rs  metadata.rs  process_lookup.rs  rule.rs  tunnel_mode.rs
crates/mihomo-common/src/sniffer/: http.rs  mod.rs  tls.rs
crates/mihomo-common/tests/: common_test.rs
crates/mihomo-config/: Cargo.toml
crates/mihomo-config/src/: auth.rs  dns_parser.rs  ech_dns.rs  geodata.rs  lib.rs  proxy_parser.rs  proxy_provider.rs  raw.rs  rule_parser.rs  rule_provider.rs  subscription.rs
crates/mihomo-config/tests/: config_persistence_test.rs  config_test.rs  ech_dns_test.rs
crates/mihomo-dns/: Cargo.toml
crates/mihomo-dns/src/: cache.rs  lib.rs  resolver.rs  server.rs
crates/mihomo-dns/tests/: dns_cache_test.rs  doh_dot_integration.rs
crates/mihomo-listener/: Cargo.toml
crates/mihomo-listener/src/: http_proxy.rs  lib.rs  mixed.rs  sniffer.rs  socks5.rs  tun_conn.rs
crates/mihomo-listener/src/tproxy/: firewall.rs  mod.rs  orig_dest.rs  sni.rs
crates/mihomo-proxy/: Cargo.toml
crates/mihomo-proxy/src/: direct.rs  health.rs  lib.rs  reject.rs  shadowsocks_adapter.rs  trojan.rs  v2ray_plugin.rs  vless_adapter.rs
crates/mihomo-proxy/src/group/: fallback.rs  selector.rs  urltest.rs
crates/mihomo-proxy/src/vless/: conn.rs  vision.rs
crates/mihomo-proxy/tests/: shadowsocks_integration.rs  trojan_integration.rs  v2ray_plugin_integration.rs
crates/mihomo-rules/: Cargo.toml
crates/mihomo-rules/benches/: rules_bench.rs
crates/mihomo-rules/src/: country_index.rs  geosite.rs  geosite_rule.rs  in_name.rs  in_type.rs  in_user.rs  lib.rs  mrs_parser.rs  parser.rs  port.rs  process.rs  rule_set.rs
crates/mihomo-rules/tests/: rules_test.rs
crates/mihomo-transport/src/: tls.rs  ws.rs
crates/mihomo-transport/tests/: boring_tls_test.rs  ws_test.rs
crates/mihomo-transport/tests/support/: loopback.rs
crates/mihomo-trie/: Cargo.toml
crates/mihomo-trie/benches/: trie_bench.rs
crates/mihomo-trie/src/: trie.rs
crates/mihomo-tunnel/: Cargo.toml
crates/mihomo-tunnel/benches/: rules_bench.rs  udp_bench.rs
crates/mihomo-tunnel/src/: match_engine.rs  statistics.rs  tcp.rs  tunnel.rs  udp.rs
crates/mihomo-tunnel/tests/: pre_resolve_test.rs  statistics_test.rs
docs/: ci-status.md  gap-analysis.md  index.html  roadmap.md  soak-test-plan.md  vision.md
docs/adr/: 0001-mihomo-transport-crate.md  0002-upstream-divergence-policy.md  0006-m2-benchmark-methodology.md  0007-m2-footprint-budget.md  0008-m2-allocator-audit.md
docs/benchmarks/: baseline-2026-04-18.json  binary-size.md  methodology.md  rule-engine-findings.md
docs/specs/: api-delay-endpoints-test-plan.md  api-delay-endpoints.md  api-logs-websocket-test-plan.md  api-logs-websocket.md  dns-doh-dot-test-plan.md  dns-doh-dot.md  dns-nameserver-policy.md  ech-utls-status.md  geodata-subsection.md  group-load-balance-test-plan.md  group-load-balance.md  group-relay-test-plan.md  group-relay.md  inbound-auth-acl.md  listeners-unified.md  metrics-prometheus.md  proxy-http-socks-outbound.md  proxy-providers-test-plan.md  proxy-providers.md  proxy-vless-test-plan.md  proxy-vless.md  proxy-vmess-test-plan.md  proxy-vmess.md  rules-parser-completion-test-plan.md  rules-parser-completion.md  sniffer-test-plan.md  sniffer.md  transport-layer-test-plan.md  transport-layer.md
docs/superpowers/specs/: 2026-04-08-v2ray-plugin-builtin-design.md
mihomo-rust/: README.md
tests/: test_tproxy_qemu.sh
tests/tproxy-qemu/: guest-init.sh
