[package]
name = "mihomo-config"
version.workspace = true
edition.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-trie = { workspace = true }
mihomo-dns = { workspace = true }
mihomo-rules = { workspace = true }
mihomo-proxy = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3"
