[package]
name = "mihomo-listener"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
mihomo-common = { workspace = true }
mihomo-tunnel = { workspace = true }
mihomo-dns = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
